--- a/Knock/locale/en.json
+++ b/Knock/locale/en.json
@@ -156,6 +156,24 @@
         }
       },
 
+      "manage_whitelist": {
+        "select_operation": {
+          "title": "👷  Select operation"
+        },
+        "select_add_user": {
+          "title": "🫵  Select users to add"
+        },
+        "select_remove_user": {
+          "title": "🫵  Select users to remove"
+        },
+        "select_no_user": {
+          "title": "There is no user you can manage"
+        },
+        "operation_done": {
+          "title": "✅  Operation completed successfully"
+        }
+      },
+
       "launch": {
         "success": {
           "title": "✅  Your container has started.",
@@ -298,6 +316,11 @@
           "description": "Configure server.properties to change server configuration",
           "icon": "📝"
         },
+        "manage_whitelist": {
+          "title": "Manage whitelist",
+          "description": "Manage the whitelist",
+          "icon": "👨‍👩‍👧‍👦"
+        },
         "manage_owner": {
           "title": "Manage co-owners",
           "description": "Manage co-ownership privileges for server containers, including in-game privileges.",
@@ -332,6 +355,22 @@
       }
     },
 
+    "manage_whitelist": {
+      "label": "Select operation...",
+      "options": {
+        "add": {
+          "title": "Add players",
+          "description": "Add the player to the whitelist.",
+          "icon": "🧑‍💻"
+        },
+        "remove": {
+          "title": "Remove players",
+          "description": "Remove the player from the whitelist.",
+          "icon": "🧯"
+        }
+      }
+    },
+
     "select_user": {
       "label": "Select users..."
     }
@@ -346,6 +385,7 @@
   "threads": {
     "edit_server_properties": "Editing server setting",
     "manage_owner": "Manage co-owners",
+    "manage_whitelist": "Manage whitelist",
     "log_output": "Log"
   },
 
